<resources>
    <string name="app_name">Cafe</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="mo_no">Mobile No</string>
    <string name="email">Email</string>
    <string name="pwd">Password</string>
    <string name="confirm_pwd">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="registration">CREATE ACCOUNT</string>
    <string name="login">Login</string>
    <string name="condition">Terms&amp;Conditions</string>
    <string name="action_bar_button_search"></string>
    <string name="clicking_text">Click Here if you are interested..</string>
    <string name="title_activity_search_cafe">Map</string>
    <string name="menu">This is screen for menu</string>
    <string name="offers">See our Offers...</string>
    <string name="payment_text">Make Payment And Get Your Offers..</string>
    <string name="online_payment">Online</string>
    <string name="offline_payment">Offline</string>
    <string name="cancel">Cancel</string>
    <string name="forgot_pwd"><u>Forgot Password \?</u></string>
    <string name="ok">Ok</string>
    <string name="fp_text">Enter Mobile to reset you password</string>
    <string name="code">Verification code</string>
    <string name="new_pwd">New Password</string>
    <string name="reset">Reset</string>
    <string name="hookah_text">Enjoy your hookka</string>
    <string name="create_account"><u>Create Account</u></string>
</resources>
