<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="15dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:ems="10"
            android:hint="@string/code"
            android:padding="10dp"
            android:background="@drawable/rounded_corner"
            android:id="@+id/ed_cafe_reset_pwd_code" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/new_pwd"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:background="@drawable/rounded_corner"
            android:id="@+id/ed_cafe_reset_pwd_new_pwd" />
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/confirm_pwd"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:background="@drawable/rounded_corner"
            android:id="@+id/ed_cafe_reset_pwd_confirm_pwd" />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:weightSum="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/reset"
                android:layout_weight="0.5"
                android:layout_marginRight="8dp"
                android:background="@drawable/btn_rouded_corners"
                android:id="@+id/btn_cafe_reset_pwd_reset" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/cancel"
                android:layout_weight="0.5"
                android:background="@drawable/btn_rouded_corners"
                android:id="@+id/btn_cafe_reset_pwd_cancel" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>