<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="90dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_cafe_fp_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fp_text"
            android:textSize="20dp" />


        <EditText
            android:id="@+id/ed_cafe_fp_mo_no"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_corner"
            android:ems="10"
            android:hint="@string/mo_no"
            android:inputType="phone"
            android:padding="10dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/btn_cafe_fp_ok"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@drawable/btn_rouded_corners"
                android:text="@string/ok" />

            <Button
                android:id="@+id/btn_cafe_fp_cancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_weight="0.5"
                android:background="@drawable/btn_rouded_corners"
                android:text="@string/cancel" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>